# tatami

./: .buildinfo  .gitignore  README.md  branding.html  di-test.ipynb  docs-requirements.txt  genindex.html  index.html  main.py  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js
.github/workflows/: gh-pages.yml  pypi-publish.yml
_modules/: index.html
_modules/tatami/: __main__.html  _utils.html  config.html  convention.html  core.html  di.html  doctor.html  endpoint.html  openapi.html  param.html  responses.html  router.html  validation.html
_sources/: branding.rst.txt  index.rst.txt
_sources/api/: tatami.rst.txt
_sources/cli/: commands.rst.txt
_sources/tutorial/: deployment.rst.txt  (+5 more)
_static/: documentation_options.js
advanced/: index.html
cli/: commands.html  docker_deployment.html  installation.html
docs/: Makefile  fix_logo_paths.py  make.bat  requirements.txt
doctrees/: environment.pickle  index.doctree
html/: .buildinfo  index.html  py-modindex.html  search.html  searchindex.js
migration/: from_django.html  from_fastapi.html  from_flask.html
reference/: api.html  configuration.html
tatami/: __init__.py  __main__.py  _utils.py  config.py  convention.py  core.py  di.py  doctor.py  endpoint.py  openapi.py  param.py  responses.py  router.py  tatami.py  validation.py
tests/: test_utils.py
tutorial/: dependency_injection.html  deployment.html  middleware_and_services.html  project_structure.html  quickstart.html  routing_guide.html  testing_your_api.html  working_with_data.html  your_first_api.html
(+115 files in other folders)
